scrollbar and nav back fix

--- a/files/index.css
+++ b/files/index.css
@@ -163,7 +163,15 @@ nav.sidebar {
     background-color: #1C1C1C;
     border-right: 1px solid #303030;
     z-index: 2;
-    overflow: hidden;
+    overflow-x: hidden;
+}
+
+nav.sidebar::-webkit-scrollbar {
+    border-left: 1px solid #303030;
+}
+
+nav.sidebar::-webkit-scrollbar-thumb {
+    background-color: rgba(255, 255, 255, 0.1);
 }
 
 nav.sidebar::after {
